[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/SourceSansPro-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Comfortaa/static/Comfortaa-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/board.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=6]
size = 90
font_data = ExtResource( 2 )

[node name="Menu" type="Node2D"]
script = ExtResource( 4 )
mainGameScene = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.133333, 0.239216, 0.32549, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 300
custom_constants/margin_left = 300
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 300.0
margin_right = 1620.0
margin_bottom = 980.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1320.0
margin_bottom = 488.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "NOMOPOLY"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 492.0
margin_right = 1320.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1320.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 100.0
margin_right = 1220.0
margin_bottom = 149.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "SPIEL STARTEN"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 169.0
margin_right = 1320.0
margin_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 100.0
margin_right = 1220.0
margin_bottom = 149.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_right = 344.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "Spieler:"
align = 1
valign = 1

[node name="MinusButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 374.0
margin_right = 648.0
margin_bottom = 149.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "-"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 678.0
margin_right = 815.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_fonts/font = SubResource( 6 )
text = "2"
align = 1
valign = 1

[node name="PlusButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 845.0
margin_right = 1120.0
margin_bottom = 149.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "+"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 1320.0
margin_bottom = 488.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 100.0
margin_right = 1220.0
margin_bottom = 150.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
text = "VERLASSEN"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/MinusButton" to="." method="_on_MinusButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/PlusButton" to="." method="_on_PlusButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/ExitButton" to="." method="_on_ExitButton_pressed"]
